codex cleanup.