@@ -117,7 +117,7 @@ public class Check {
 		int index=part.indexOf(delimiter);
 		if(index<0) throw new RuntimeException("oops");
 		part=part.substring(0,index);
-		handNumber=new Long(part);
+		handNumber=Long.valueOf(part);
 		if(handNumber<=0) throw new RuntimeException("oops");
 		return handNumber;
 	}
